# curriculum-vitae

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.sh  composer.json  index.html
.github/workflows/: rust.yml
data/: assets.schema.json  assets.yml  cv.schema.json  cv.yml  experiences.php  info.dist.json  info.yml  schema.json  technos.csv  technos.schema.json  technos.yml
public/: index.php
src/: assets.json  assets.rs  cv.rs  lib.rs  main.rs  technos.rs
src/Cv/: Competence.php  CompetenceService.php  Experience.php  ExperienceCollection.php  Helper.php  Html.php  Periode.php  SheetReader.php  SingletonTrait.php  StackCollection.php  TacheCollection.php  Tpl.php
src/scss/: main.scss
src/tpl/: address.html.mu  adresse.mu  comp.php  cv.html.mu  cv.mu  experiences.html.mu  experiences.mu  index.html.mu  index.mu  info.html.mu  info.mu
src/tpl/html/: link.mu
