[package]
name = "curriculum-vitae"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.11", features = ["derive"] }
csv = "1.2.2"
grass = "0.13.0"
mustache = "0.9.0"
schemars = { version = "0.8.12", features = ["chrono", "url"] }
serde = { version = "1.0.170", features = ["derive"] }
serde_json = "1.0.100"
serde_yaml = "0.9.22"
slugify = "0.1.0"
url = { version = "2.4.0", features = ["serde"] }
